tests/ui/lowering/expr-in-pat-issue-99380.stderr
error: arbitrary expressions aren't allowed in patterns
  --> $DIR/expr-in-pat-issue-99380.rs:19:10
   |
LL |     foo!(Some(3));
   |          ^^^^^^^
   |
   = note: the `expr` fragment specifier forces the metavariable's content to be an expression

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/expr-in-pat-issue-99380.rs:21:33
   |
LL |     let _ = custom_matches!(67, 6 | 7);
   |                                 ^^^^^
   |
   = note: the `expr` fragment specifier forces the metavariable's content to be an expression

error: aborting due to 2 previous errors

